chromeos/components/camera_app_ui/resources/css/main.css
/* ... */
::-webkit-scrollbar-thumb {
  background: transparent;
  height: 0;
  width: 0;
}

.top-stripe {
  position: absolute;
  top: 48px;
  transform: translateY(-50%);
}

.bottom-stripe {
  bottom: var(--bottom-line);
  position: absolute;
  transform: translateY(50%);
}

.left-stripe {
  left:  var(--left-line);
  opacity: 1;
  position: absolute;
  transform: translateX(-50%);
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1);
  visibility: visible;
}

body.taking.video .left-stripe {
  opacity: 0;
  transition: visibility 0ms 225ms, opacity 225ms cubic-bezier(0.4, 0, 0.2, 1);
  visibility: hidden;
}

.right-stripe {
  position: absolute;
  right:  var(--right-line);
  transform: translateX(50%);
}

.horizontal-center-stripe {
  left: 50%;
  position: absolute;
  transform: translateX(-50%);
}

.vertical-center-stripe {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

.top-stripe.right-stripe {
  transform: translate(50%, -50%);
}

.top-stripe.left-stripe {
  transform: translate(-50%, -50%);
}

.top-stripe.horizontal-center-stripe {
  transform: translate(-50%, -50%);
}

.bottom-stripe.right-stripe {
  transform: translate(50%, 50%);
}

.bottom-stripe.left-stripe {
  transform: translate(-50%, 50%);
}

#shutters-group {
  --shutter-size: 60px;

  bottom: var(--shutter-vertical-center);
  display: flex;
  flex-direction: column;
  transform: translate(50%, 50%);
}

body.review-result #shutters-group {
  display: none;
}

body.should-handle-intent-result #shutters-group {
  bottom: calc((var(--bottom-line) * 2) + 8px + (var(--shutter-size) / 2));
}

body.tablet-landscape .actions-group {
  flex-direction: column-reverse;
}

#modes-group {
  --fade-padding: 16px;

  -webkit-mask-image: linear-gradient(to left,
    rgba(0, 0, 0, 0) 0,
    rgba(0, 0, 0, 1) var(--fade-padding) calc(100% - var(--fade-padding)),
    rgba(0, 0, 0, 0) 100%);
  left: calc(var(--left-line) * 2);
  overflow: auto;
  padding: 5px 0;
  pointer-events: auto;
  right: calc(var(--right-line) * 2);
  text-align: center;
  white-space: nowrap;
}

body:not(.streaming) #modes-group,
body.taking #modes-group,
body.taking:not(.video) #shutters-group {
  opacity: 0.38;
}

#modes-group::-webkit-scrollbar-thumb {
  background: gray;
  border-radius: 3px/50%;
  height: auto;
  width: auto;
}

#modes-group::-webkit-scrollbar {
  height: 5px;
  width: auto;
}

body.taking.video #gallery-enter,
body.taking.video #modes-group {
  display: none;
}

body.should-handle-intent-result #modes-group {
  display: none;
}

#play-result-video {
  background-image: url(/images/camera_intent_play_video.svg);
  height: 80px;
  width: 80px;
}

#confirm-result-groups {
  bottom: calc(var(--bottom-line) - 36px);
  display: flex;
  flex-direction: column;
}

#confirm-result-groups>button {
  flex: 0 0 76px;
  height: 72px;
  width: 72px;
}

body.review-result #switch-device,
body.review-result #preview-video,
body:not(.review-result) #confirm-result-groups,
body:not(.review-photo-result) #review-photo-result,
body:not(.review-video-result) #review-video-result,
body:not(.review-video-result) #play-result-video,
body.playing-result-video #play-result-video {
  display: none;
}

#confirm-result {
  background-image: url(/images/camera_intent_result_confirm.svg);
}

#cancel-result {
  background-image: url(/images/camera_intent_result_cancel.svg);
}

#modes-group .mode-item {
  --focus-ring-gap: 7px;
  --focus-ring-border: 2px;

  display: inline-block;
  font-size: 0; /* Remove space between inline-block. */
  margin: calc(var(--focus-ring-gap) + var(--focus-ring-border)) 12px;
  position: relative;
}

#modes-group .mode-item.hide {
  display: none;
}

div.mode-item>span {
  border-radius: 16px/50%;
  color: white;
  display: inline-block;
  font-size: 14px;
  font-weight: 500;
  line-height: 16px;
  padding: 8px 12px;
  position: relative;
  z-index: 0;
}

#modes-group.hide {
  visibility: hidden;
}

.mode-item>input {
  height: 100%;
  position: absolute;
  width: 100%;
  z-index: 1;
}

body.tab-navigation .mode-item>input:focus::after {
  display: none;
}

.mode-item>input:checked + span {
  background: white;
  box-shadow: 0 2px 3px rgba(32, 33, 36, 0.3);
  color: black;
  text-shadow: none;
}

body.tab-navigation .mode-item>input:focus + span::after {
  --negative-size: calc(0px - var(--focus-ring-gap));

  border: var(--focus-ring-border) solid rgba(37, 129, 223, 0.7);
  border-radius: 23px/50%;
  bottom: var(--negative-size);
  content: '';
  left: var(--negative-size);
  position: absolute;
  right: var(--negative-size);
  top: var(--negative-size);
}

button.shutter {
  display: none;
  height: 60px;
  width: 60px;
  z-index: 1;  /* On top of transforming switch-mode buttons. */
}

body.tab-navigation button.shutter:focus::after {
  --focus-ring-size: 9px;
}

body.video #recordvideo,
body:not(.taking):not(.video) #start-takephoto,
body:not(.timer):not(.video) #start-takephoto,
body.taking.timer:not(.video) #stop-takephoto {
  display: inline-block;
}

body:not(.recording) #video-snapshot,
body:not(.recording) #pause-recordvideo,
body.should-handle-intent-result #video-snapshot,
body.should-handle-intent-result #pause-recordvideo {
  display: none;
}

#video-snapshot-holder {
  bottom: calc(var(--shutter-vertical-center) + 84px);
  transform: translate(50%, 50%);
}

#video-snapshot {
  background-size: 44px 44px;
  height: 44px;
  width: 44px;
}

#start-takephoto,
#video-snapshot {
  background-image: url(/images/camera_shutter_photo_start.svg);
}

#start-takephoto:hover,
#video-snapshot:hover {
  background-image: url(/images/camera_shutter_photo_start_hover.svg);
}

#start-takephoto:active,
#video-snapshot:active {
  background-image: url(/images/camera_shutter_photo_start_active.svg);
}

#stop-takephoto {
  background-image: url(/images/camera_shutter_photo_stop.svg);
}

#stop-takephoto:hover {
  background-image: url(/images/camera_shutter_photo_stop_hover.svg);
}

#recordvideo {
  --size: 60px;
}
/* ... */

